Moved projects to module 2.

--- a/1_Introduction_administration/pom.xml
+++ b/1_Introduction_administration/pom.xml
@@ -14,8 +14,6 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>fabric-forecasting-application</module>
-        <module>fabric-camel-rest</module>
-        <module>fabric-camel-twitter</module>
+        <module></module>
     </modules>
 </project>
