--- a/4_Architectures/fabric-amq-camel/service/pom.xml
+++ b/4_Architectures/fabric-amq-camel/service/pom.xml
@@ -11,7 +11,7 @@
     
     <artifactId>service</artifactId>
     <packaging>bundle</packaging>
-    <name>RedHat GPE Training :: Messaging :: Lab 6 :: A-MQ &amp; Camel Service</name>
+    <name>RedHat GPE Training :: Fabric :: Lab 4 :: A-MQ &amp; Camel Service</name>
     
     <build>
         <plugins>
