--- a/2_Develop_manage/fabric-forecasting-application/pom.xml
+++ b/2_Develop_manage/fabric-forecasting-application/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -9,11 +8,13 @@
   <packaging>bundle</packaging>
   <version>1.0</version>
 
-  <name>Fabric Camelforecasting application</name>
+  <name>Camel Blueprint Route</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <!-- <camel.properties>2.15.1.redhat-620133</camel.properties> -->
+    <camel.properties>2.15.1.redhat-621070</camel.properties>
   </properties>
 
   <repositories>
@@ -38,17 +39,6 @@
      <releases>
       <enabled>true</enabled>
      </releases>
-    </repository>    
-    <repository>
-      <id>snapshot.fusesource.org</id>
-      <name>FuseSource Snapshot Repository</name>
-      <url>http://repo.fusesource.com/nexus/content/repositories/snapshots</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
     </repository>
   </repositories>
 
@@ -74,17 +64,6 @@
      <releases>
       <enabled>true</enabled>
      </releases>
-    </pluginRepository>      
-    <pluginRepository>
-      <id>snapshot.fusesource.org</id>
-      <name>FuseSource Snapshot Repository</name>
-      <url>http://repo.fusesource.com/nexus/content/repositories/snapshots</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
     </pluginRepository>
   </pluginRepositories>
 
@@ -92,29 +71,34 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
-      <version>2.12.0.redhat-610379</version>
+      <version>${camel.properties}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-blueprint</artifactId>
-      <version>2.12.0.redhat-610379</version>
+      <version>${camel.properties}</version>
+    </dependency>
+       <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-groovy</artifactId>
+      <version>${camel.properties}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-weather</artifactId>
+      <version>${camel.properties}</version>
     </dependency>
 
     <!-- logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.5</version>
+      <version>1.7.10</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>1.7.5</version>
+      <version>1.7.10</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -122,12 +106,11 @@
       <version>1.2.17</version>
     </dependency>
 
-    <!-- testing -->
+    <!-- Testing & Camel Plugin -->
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test-blueprint</artifactId>
-      <version>2.12.0.redhat-610379</version>
-      <scope>test</scope>
+      <version>${camel.properties}</version>
     </dependency>
   </dependencies>
 
@@ -140,8 +123,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.5.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
@@ -159,20 +142,35 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <version>2.3.7</version>
         <extensions>true</extensions>
+        <executions>
+          <execution>
+           <id>bundle-manifest</id>
+           <phase>process-classes</phase>
+           <goals>
+               <goal>manifest</goal>
+           </goals>
+          </execution>
+        </executions>
         <configuration>
           <instructions>
             <Bundle-SymbolicName>fabric-forecasting-application</Bundle-SymbolicName>
             <Private-Package>com.redhat.gpe.fabric.forecasting.application.*</Private-Package>
-            <Import-Package>*</Import-Package>
+            <Import-Package>
+              groovy.lang,
+              org.codehaus.groovy.reflection,
+              org.codehaus.groovy.runtime.callsite,
+              *
+            </Import-Package>
+            <DynamicImport-Package>*</DynamicImport-Package>
           </instructions>
         </configuration>
       </plugin>
 
-      <!-- to run the example using mvn camel:run -->
+       <!-- to run the example using mvn camel:run -->
       <plugin>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-maven-plugin</artifactId>
-        <version>2.12.0.redhat-610379</version>
+        <version>${camel.properties}</version>
         <configuration>
           <useBlueprint>true</useBlueprint>
         </configuration>
