--- a/2_Develop_manage/fabric-forecasting-application/pom.xml
+++ b/2_Develop_manage/fabric-forecasting-application/pom.xml
@@ -175,6 +175,18 @@
           <useBlueprint>true</useBlueprint>
         </configuration>
       </plugin>
+      
+      <!-- Fabric8 -->
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>fabric8-maven-plugin</artifactId>
+        <version>1.1.0.CR5</version>
+        <configuration>
+          <profile>gpe-exercise-forecastingapplication</profile>
+          <parentProfiles>feature-camel</parentProfiles>
+          <features>camel-groovy camel-weather</features>
+        </configuration>
+      </plugin>
 
     </plugins>
   </build>
